--- a/RD3/Lang/Lang.zh-CN.xaml
+++ b/RD3/Lang/Lang.zh-CN.xaml
@@ -5,7 +5,8 @@
     <system:String x:Key="Main">主页</system:String>
     <system:String x:Key="Project">项目</system:String>
     <system:String x:Key="Data">数据</system:String>
-    <system:String x:Key="Calibrate">校准标定</system:String>
+    <system:String x:Key="Calibrate">校准</system:String>
+    <system:String x:Key="Calibration">校准</system:String>
     <system:String x:Key="Control">过程控制</system:String>
     <system:String x:Key="Setting">系统设置</system:String>
     <system:String x:Key="Debug">调试</system:String>
@@ -39,6 +40,7 @@
     <system:String x:Key="Search">搜索</system:String>
     <system:String x:Key="Add">新建</system:String>
     <system:String x:Key="Select">选择</system:String>
+    <system:String x:Key="Select all">全选</system:String>
     <system:String x:Key="Username">用户名</system:String>
     <system:String x:Key="Create Time">创建时间</system:String>
     <system:String x:Key="Update Time">更新时间</system:String>
@@ -207,4 +209,10 @@
     <system:String x:Key="Sensor Kind">传感器型号</system:String>
     <system:String x:Key="Consumed:">消耗量:</system:String>
     <system:String x:Key="Applied to all reactors">应用于所有反应器</system:String>
+    <system:String x:Key="Application is initializing...">应用程序加载中...</system:String>
+    <system:String x:Key="Weight1">称重1</system:String>
+    <system:String x:Key="Weight2">称重2</system:String>
+    <system:String x:Key="Weight3">称重3</system:String>
+    <system:String x:Key="Finish">完成</system:String>
+    <system:String x:Key="Copy to other reactor">复制到其他反应器</system:String>
 </ResourceDictionary>
